[gd_scene format=4 uid="uid://bhghpc4f4sgnd"]

[ext_resource type="Script" uid="uid://ce2sictyaj6jn" path="res://Scripts/Menu/data_select_menu.gd" id="1_y1b2j"]
[ext_resource type="TileSet" uid="uid://bk1ere21h4285" path="res://Tileset/Menus.tres" id="2_y1b2j"]
[ext_resource type="PackedScene" uid="uid://douh8pscjw7hm" path="res://Entities/MenuObjects/SavePanel.tscn" id="3_echdj"]
[ext_resource type="Texture2D" uid="uid://bf2lhfxal46gj" path="res://Graphics/Menus/ButtonUp.png" id="4_iwpom"]
[ext_resource type="PackedScene" uid="uid://dqo5gtlj0xdsy" path="res://Entities/MenuObjects/no_save_panel.tscn" id="5_3bafg"]
[ext_resource type="Theme" uid="uid://qblf2beyokrn" path="res://Resources/TwoPlayerMenuTheme.tres" id="5_slue5"]
[ext_resource type="Texture2D" uid="uid://ddug2c5c54nvl" path="res://Graphics/Menus/ButtonDown.png" id="5_wvq33"]
[ext_resource type="AudioStream" uid="uid://uay8t1b3i1hi" path="res://Audio/SFX/Gimmicks/s2br_Switch.wav" id="8_iwpom"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ucjvh"]
texture = ExtResource("4_iwpom")
texture_margin_left = 8.0
texture_margin_top = 4.0
texture_margin_right = 8.0
texture_margin_bottom = 4.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_slue5"]
texture = ExtResource("4_iwpom")
texture_margin_left = 8.0
texture_margin_top = 4.0
texture_margin_right = 8.0
texture_margin_bottom = 4.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_i2h8k"]
texture = ExtResource("5_wvq33")
texture_margin_left = 8.0
texture_margin_top = 4.0
texture_margin_right = 8.0
texture_margin_bottom = 4.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y1b2j"]
bg_color = Color(1.5561339, 0, 0, 0)
border_width_top = 8
border_color = Color(0, 0, 0, 1)

[sub_resource type="Theme" id="Theme_iwpom"]
HScrollBar/styles/grabber = SubResource("StyleBoxTexture_ucjvh")
HScrollBar/styles/grabber_highlight = SubResource("StyleBoxTexture_slue5")
HScrollBar/styles/grabber_pressed = SubResource("StyleBoxTexture_i2h8k")
HScrollBar/styles/scroll = SubResource("StyleBoxFlat_y1b2j")

[node name="DataSelect" type="Control" unique_id=1562835269]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y1b2j")

[node name="Backdrop" type="Parallax2D" parent="." unique_id=362907693]
scroll_scale = Vector2(0, 0)
repeat_size = Vector2(192, 0)
repeat_times = 8

[node name="Back" type="TileMapLayer" parent="Backdrop" unique_id=1689375880]
use_parent_material = true
tile_map_data = PackedByteArray("AAADAAAAAAAAAAAAAAADAAEAAAAAAAEAAAAEAAAAAAAAAAEAAAAEAAEAAAAAAAIAAAAFAAAAAAAAAAIAAAAFAAEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEAAAAAAAEAAAABAAAAAAAAAAEAAAABAAEAAAAAAAIAAAACAAAAAAAAAAIAAAACAAEAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAMAAAAAAAEAAAABAAIAAAAAAAEAAAABAAMAAAAAAAIAAAACAAIAAAAAAAIAAAACAAMAAAAAAAAAAAADAAIAAAAAAAAAAAADAAMAAAAAAAEAAAAEAAIAAAAAAAEAAAAEAAMAAAAAAAIAAAAFAAIAAAAAAAIAAAAFAAMAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAAUAAAAAAAEAAAABAAQAAAAAAAEAAAABAAUAAAAAAAIAAAACAAQAAAAAAAIAAAACAAUAAAAAAAAAAAADAAQAAAAAAAAAAAADAAUAAAAAAAEAAAAEAAQAAAAAAAEAAAAEAAUAAAAAAAIAAAAFAAQAAAAAAAIAAAAFAAUAAAAAAAAAAAAAAAYAAAAAAAAAAAAAAAcAAAAAAAEAAAABAAYAAAAAAAEAAAABAAcAAAAAAAIAAAACAAYAAAAAAAIAAAACAAcAAAAAAAAAAAADAAYAAAAAAAAAAAADAAcAAAAAAAEAAAAEAAYAAAAAAAEAAAAEAAcAAAAAAAIAAAAFAAYAAAAAAAIAAAAFAAcAAAAAAAAAAAAAAAgAAAAAAAAAAAAAAAkAAAAAAAEAAAABAAgAAAAAAAEAAAABAAkAAAAAAAIAAAACAAgAAAAAAAIAAAACAAkAAAAAAAAAAAADAAgAAAAAAAAAAAADAAkAAAAAAAEAAAAEAAgAAAAAAAEAAAAEAAkAAAAAAAIAAAAFAAgAAAAAAAIAAAAFAAkAAAAAAAAAAAAAAAoAAAAAAAAAAAAAAAsAAAAAAAEAAAABAAoAAAAAAAEAAAABAAsAAAAAAAIAAAACAAoAAAAAAAIAAAACAAsAAAAAAAAAAAADAAoAAAAAAAAAAAADAAsAAAAAAAEAAAAEAAoAAAAAAAEAAAAEAAsAAAAAAAIAAAAFAAoAAAAAAAIAAAAFAAsAAAAAAAAAAAAAAAwAAAAAAAAAAAAAAA0AAAAAAAEAAAABAAwAAAAAAAEAAAABAA0AAAAAAAIAAAACAAwAAAAAAAIAAAACAA0AAAAAAAAAAAADAAwAAAAAAAAAAAADAA0AAAAAAAEAAAAEAAwAAAAAAAEAAAAEAA0AAAAAAAIAAAAFAAwAAAAAAAIAAAAFAA0AAAAAAAAAAAAGAAAAAAAAAAAAAAAGAAEAAAAAAAEAAAAGAAIAAAAAAAAAAAAGAAMAAAAAAAEAAAAGAAQAAAAAAAAAAAAGAAUAAAAAAAEAAAAGAAYAAAAAAAAAAAAGAAcAAAAAAAEAAAAGAAgAAAAAAAAAAAAGAAkAAAAAAAEAAAAGAAoAAAAAAAAAAAAGAAsAAAAAAAEAAAAGAAwAAAAAAAAAAAAGAA0AAAAAAAEAAAAHAAAAAAAAAAEAAAAHAAEAAAAAAAIAAAAHAAIAAAAAAAEAAAAHAAMAAAAAAAIAAAAHAAQAAAAAAAEAAAAHAAUAAAAAAAIAAAAHAAYAAAAAAAEAAAAHAAcAAAAAAAIAAAAHAAgAAAAAAAEAAAAHAAkAAAAAAAIAAAAHAAoAAAAAAAEAAAAHAAsAAAAAAAIAAAAHAAwAAAAAAAEAAAAHAA0AAAAAAAIAAAAIAAAAAAAAAAIAAAAIAAEAAAAAAAAAAAAIAAIAAAAAAAIAAAAIAAMAAAAAAAAAAAAIAAQAAAAAAAIAAAAIAAUAAAAAAAAAAAAIAAYAAAAAAAIAAAAIAAcAAAAAAAAAAAAIAAgAAAAAAAIAAAAIAAkAAAAAAAAAAAAIAAoAAAAAAAIAAAAIAAsAAAAAAAAAAAAIAAwAAAAAAAIAAAAIAA0AAAAAAAAAAAAJAAAAAAAAAAAAAAAJAAEAAAAAAAEAAAAJAAIAAAAAAAAAAAAJAAMAAAAAAAEAAAAJAAQAAAAAAAAAAAAJAAUAAAAAAAEAAAAJAAYAAAAAAAAAAAAJAAcAAAAAAAEAAAAJAAgAAAAAAAAAAAAJAAkAAAAAAAEAAAAJAAoAAAAAAAAAAAAJAAsAAAAAAAEAAAAJAAwAAAAAAAAAAAAJAA0AAAAAAAEAAAAKAAAAAAAAAAEAAAAKAAEAAAAAAAIAAAAKAAIAAAAAAAEAAAAKAAMAAAAAAAIAAAAKAAQAAAAAAAEAAAAKAAUAAAAAAAIAAAAKAAYAAAAAAAEAAAAKAAcAAAAAAAIAAAAKAAgAAAAAAAEAAAAKAAkAAAAAAAIAAAAKAAoAAAAAAAEAAAAKAAsAAAAAAAIAAAAKAAwAAAAAAAEAAAAKAA0AAAAAAAIAAAALAAAAAAAAAAIAAAALAAEAAAAAAAAAAAALAAIAAAAAAAIAAAALAAMAAAAAAAAAAAALAAQAAAAAAAIAAAALAAUAAAAAAAAAAAALAAYAAAAAAAIAAAALAAcAAAAAAAAAAAALAAgAAAAAAAIAAAALAAkAAAAAAAAAAAALAAoAAAAAAAIAAAALAAsAAAAAAAAAAAALAAwAAAAAAAIAAAALAA0AAAAAAAAAAAA=")
tile_set = ExtResource("2_y1b2j")

[node name="CanvasTop" type="CanvasLayer" parent="." unique_id=1228995231]

[node name="Control" type="Control" parent="CanvasTop" unique_id=1001250952]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2

[node name="GameModeText" type="RichTextLabel" parent="CanvasTop/Control" unique_id=426431054]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -160.0
offset_top = 8.0
offset_right = 160.0
offset_bottom = 24.0
grow_horizontal = 2
theme = ExtResource("5_slue5")
bbcode_enabled = true
text = "[center]SELECT DATA"
scroll_active = false
autowrap_mode = 0

[node name="Cover" type="CanvasLayer" parent="." unique_id=1438213798]
layer = 0
visible = false

[node name="Back" type="ColorRect" parent="Cover" unique_id=942873448]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="ScrollContainer" type="ScrollContainer" parent="." unique_id=1662878450]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.125
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0
theme = SubResource("Theme_iwpom")
follow_focus = true

[node name="SaveFileContainer" type="HBoxContainer" parent="ScrollContainer" unique_id=1880676420]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 0

[node name="NoSavePanel" parent="ScrollContainer/SaveFileContainer" unique_id=2044579652 instance=ExtResource("5_3bafg")]
layout_mode = 2

[node name="SavePanel" parent="ScrollContainer/SaveFileContainer" unique_id=46724171 instance=ExtResource("3_echdj")]
layout_mode = 2

[node name="SavePanel2" parent="ScrollContainer/SaveFileContainer" unique_id=1835513417 instance=ExtResource("3_echdj")]
layout_mode = 2

[node name="SavePanel3" parent="ScrollContainer/SaveFileContainer" unique_id=133056875 instance=ExtResource("3_echdj")]
layout_mode = 2

[node name="SavePanel4" parent="ScrollContainer/SaveFileContainer" unique_id=406826946 instance=ExtResource("3_echdj")]
layout_mode = 2

[node name="SavePanel5" parent="ScrollContainer/SaveFileContainer" unique_id=668580021 instance=ExtResource("3_echdj")]
layout_mode = 2

[node name="SavePanel6" parent="ScrollContainer/SaveFileContainer" unique_id=614272837 instance=ExtResource("3_echdj")]
layout_mode = 2

[node name="Switch" type="AudioStreamPlayer" parent="." unique_id=1330843891]
stream = ExtResource("8_iwpom")
bus = &"SFX"

[node name="Camera2D" type="Camera2D" parent="." unique_id=1562690110]
position = Vector2(160, 112)
limit_left = 0
limit_top = 0
limit_bottom = 224
